--- a/Figaro/Figaro/Views/SeleccionarZona.xaml
+++ b/Figaro/Figaro/Views/SeleccionarZona.xaml
@@ -13,7 +13,7 @@
       <ListView.ItemTemplate>
         <DataTemplate>
           <ViewCell>
-            <StackLayout Orientation="Horizontal"  HeightRequest="200">
+            <StackLayout Orientation="Horizontal" HeightRequest="200">
               <RelativeLayout Padding="0,0,0,0">
                 <Image Source="{Binding ImagenFondo}"
                        RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}"
@@ -25,9 +25,10 @@
                   <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
                     <Label Text="{Binding Titulo}" 
                       HorizontalOptions="Center" FontSize="30" TextColor="White"/>
-
                     <Image Source="icono_select.png" WidthRequest="40"
                            HeightRequest="40" Aspect="AspectFit" IsVisible="{Binding Actual}"/>
+                    <Image Source="icono_noselect.png" WidthRequest="40"
+                            HeightRequest="40" Aspect="AspectFit" IsVisible="{Binding NoActual}"/>
                   </StackLayout>
                   
                 </Grid>
