--- a/Figaro/Figaro/Views/UserPage.xaml
+++ b/Figaro/Figaro/Views/UserPage.xaml
@@ -8,14 +8,14 @@
               xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
               x:Name="userPage"
               Title="Mi Perfil">
-  <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+  <!--<Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">-->
     <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}"  
                        HeightRequest="50" WidthRequest="50"
                        HorizontalOptions="Center" VerticalOptions="Center" Margin="0"/>
     <StackLayout IsEnabled="{Binding IsIdle}"
                  IsVisible="{Binding IsIdle}" >
-      <ScrollView>
-        <StackLayout Orientation="Vertical">
+      <ScrollView Margin="0">
+        <StackLayout Orientation="Vertical" Padding="12,6">
           <!--controls:CircleImage Source="{Binding UsuarioLogueado.Imagen}" WidthRequest="70.0"
                                           HeightRequest="70.0" Aspect="AspectFit" />-->
           <Label Text="Nombre" />
@@ -37,7 +37,6 @@
           </Picker>
           <Button Text="Guardar cambios" Clicked="Post_OnClicked" />
           <Button Text="Ver pedidos realizados" Clicked="VerPedidos_OnClicked"/>
-
         </StackLayout>
       </ScrollView>
       <StackLayout VerticalOptions="EndAndExpand">
@@ -61,5 +60,5 @@
         </Grid>
       </StackLayout>
     </StackLayout>
-  </Grid>
+  <!--</Grid>-->
 </ContentPage>
