--- a/Figaro/Figaro/Views/VerChef.xaml
+++ b/Figaro/Figaro/Views/VerChef.xaml
@@ -14,7 +14,7 @@
           <RowDefinition Height="50"/>
           <!--<RowDefinition Height="5*"/>-->
         </Grid.RowDefinitions>
-        <RelativeLayout Padding="0,0,0,0" Grid.Row="0">
+        <RelativeLayout Padding="0,0,0,0" Grid.Row="0" BackgroundColor="#eee" Scale="1.05">
           <Image Source="{Binding ChefSeleccionado.ImagenFondo}"
                  RelativeLayout.WidthConstraint=
                         "{ConstraintExpression Type=RelativeToParent, Property=Width}"
@@ -25,7 +25,7 @@
                         "{ConstraintExpression Type=RelativeToParent, Property=Width}"
                  RelativeLayout.HeightConstraint=
                         "{ConstraintExpression Type=RelativeToParent, Property=Height}">
-            <StackLayout Orientation="Horizontal" VerticalOptions="Center" HorizontalOptions="Center">
+            <StackLayout Orientation="Horizontal" VerticalOptions="Center" HorizontalOptions="Center" Padding="10,0">
               <controls:CircleImage Source="{Binding ChefSeleccionado.Imagen}" WidthRequest="100"
                                       HeightRequest="100" Aspect="AspectFill"
                                   VerticalOptions="Start" HorizontalOptions="Center"/>
@@ -77,12 +77,12 @@
                     FontAttributes="None"  Grid.Column="1" HorizontalOptions="Center"/>
             <Label x:Name="OpinionesTab" Text="OPINIONES" FontSize="14"
                     FontAttributes="None"  Grid.Column="2" HorizontalOptions="Center"/>
-            <BoxView x:Name="LineaPerfilTab" Color="#CC0311" HeightRequest="0.5"
-                      VerticalOptions="End" Grid.Column="0" IsVisible="True"/>
-            <BoxView x:Name="LineaDisponibilidadTab" Color="#CC0311" HeightRequest="0.5"
-                      VerticalOptions="End" Grid.Column="1" IsVisible="False"/>
-            <BoxView x:Name="LineaOpinionesTab" Color="#CC0311" HeightRequest="0.5"
-                      VerticalOptions="End" Grid.Column="2" IsVisible="False"/>
+            <BoxView x:Name="LineaPerfilTab" Color="#CC0311" HeightRequest="1"
+                      VerticalOptions="End" Grid.Column="0" Scale="1.1"/>
+            <BoxView x:Name="LineaDisponibilidadTab" Color="Black" HeightRequest="1"
+                      VerticalOptions="End" Grid.Column="1" Scale="1.1" Opacity="0.5"/>
+            <BoxView x:Name="LineaOpinionesTab" Color="Black" HeightRequest="1"
+                      VerticalOptions="End" Grid.Column="2" Scale="1.1" Opacity="0.5"/>
           </Grid>
          
           <!--Perfil-->
